# kotoba_player

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker_start.ps1
src/: api.rs  kotoba_player.rs  lib.rs  tokenizer.rs
