[package]
name = "kotoba_player"
version = "0.1.0"
authors = ["えてみなる <47494433+eteeeeeerminal@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lindera = "0.7.1"
lindera-core = "0.7.1"
serde = "*"